Add: Hills: Inventing God

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -426,6 +426,13 @@
     <section>
       <h2>Existence of God</h2>
       <ul>
+        <li>Mills, Jon:
+          <i class="booktitle">Inventing God: Psychology of Belief and the Rise of Secular Spirituality</i>. Routledge, 2017. (244 pages)
+          <a href="https://www.routledge.com/Inventing-God-Psychology-of-Belief-and-the-Rise-of-Secular-Spirituality/Mills/p/book/9781138195752"><abbr>ISBN</abbr> 9781138195752</a>.
+          <br />See also <a href="https://www.youtube.com/watch?v=mHkXzON-NWI">Inventing God: Psychology of Belief and the Rise of Secular Spirituality</a>
+          (<i class="ytchannel"> Dr. Jon Mills, Philosopher-Psychoanalyst</i> on YouTube, 18 minutes, 03.07.2016),
+          in which the author explains what motivated him to write the book and what it is about.
+        </li>
         <li>Conifer, Steven J.:
           <a href="https://infidels.org/library/modern/steven_conifer/ar.html">The Argument from Reason for the Nonexistence of God</a>,
           <i class="website">The Secular Web</i>, 2001.
