Add: Oppy: Atheism: The Basics

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -640,6 +640,10 @@
           <q>Eight hundred and fifty people answered thirty-six in-depth questions about their process of letting go of their faith beliefs.
           Their answers provide useful data for atheist advocacy, but it’s not just data: the honest, moving and often darkly humorous comments inspire artistic and philosophical exploration.</q>
         </li>
+        <li>Oppy, Graham:
+          <i class="booktitle">Atheism: The Basics</i>. Routledge, 2019. (190 pages)
+          <a href="https://www.routledge.com/Atheism-The-Basics/Oppy/p/book/9781138506961"><abbr>ISBN</abbr> 9781138506961</a>.
+        </li>
         <li><span lang="de">Anonymus:
           <i class="booktitle">Traktat über die drei Betrüger</i>. Herausgegeben von Winfried Schröder. Meiner</span>, 1994. (LII + 168 pages)
           <a href="https://meiner.de/traktat-uber-die-drei-betruger.html"><abbr>ISBN</abbr> 978-3-7873-1174-3</a>.
