Add: Amarasingam: Religion and the New Atheism: A Critical Appraisal

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1122,6 +1122,10 @@
           <i class="booktitle">The Politics of New Atheism</i>. Routledge, 2020. (172 pages)
           <a href="https://www.routledge.com/The-Politics-of-New-Atheism/McAnulla-Kettell-Schulzke/p/book/9780367471705"><abbr>ISBN</abbr> 9780367471705</a>.
         </li>
+        <li>Amarasingam, Amarnath (editor):
+          <i class="booktitle">Religion and the New Atheism: A Critical Appraisal</i>. Studies in Critical Social Sciences. Haymarket Books, 2012. (256 pages)
+          <a href="https://www.haymarketbooks.org/books/441-religion-and-the-new-atheism"><abbr>ISBN</abbr> 9781608462032</a>.
+        </li>
       </ul>
     </section>
 
