Add: Brockman: What Should We Be Worried About? Brockman: Know This

--- a/science/index.html
+++ b/science/index.html
@@ -210,6 +210,15 @@
           <i class="booktitle">What Have You Changed Your Mind About?: Today's Leading Minds Rethink Everything</i>. HarperCollins, 2016. (416 pages)
           <a href="https://harpercollins.co.uk/products/what-have-you-changed-your-mind-about-todays-leading-minds-rethink-everything-edge-question-series-john-brockman?variant=39339338989646"><abbr>ISBN</abbr> 9780061686542</a>.
         </li>
+        <li>Brockman, John:
+          <i class="booktitle">What Should We Be Worried About? Real Scenarios That Keep Scientists Up at Night</i>. HarperCollins, 2016. (528 pages)
+          <a href="https://harpercollins.co.uk/products/what-should-we-be-worried-about-real-scenarios-that-keep-scientists-up-at-night-edge-question-series-john-brockman?variant=32637766697038"><abbr>ISBN</abbr> 9780062296238</a>.
+        </li>
+        <li>Brockman, John:
+          <i class="booktitle">Know This: Today's Most Interesting and Important Scientific Ideas, Discoveries, and Developments</i>. HarperCollins, 2017. (608 pages)
+          <a href="https://harpercollins.co.uk/products/know-this-todays-most-interesting-and-important-scientific-ideas-discoveries-and-developments-edge-question-series-john-brockman?variant=39330997567566"><abbr>ISBN</abbr> 9780062562067</a>.
+        </li>
+        <!--Other books by John Brockman: https://harpercollins.co.uk/collections/books-by-john-brockman -->
         <li>Zimring, James C.:
           <i class="booktitle">What Science Is and How It Really Works</i>.
           Cambridge University Press, 2019. (402 pages)
