Add: D'Angour: Eureka – what’s the truth about Archimedes’ cry?

--- a/science/index.html
+++ b/science/index.html
@@ -1307,33 +1307,6 @@
           <a href="https://www.editions-zones.fr/livres/kubark/" hreflang="fr"><abbr>ISBN</abbr> 9782355220456</a>.
         </li>
       </ul>
-      <!--"The 25 Best Self Improvement Books To Read Before You Turn 25" Lifehack; last updated on 24.08.2018:
-        1. Seth Godin: Whatcha Gonna Do with That Duck? And Other Provocations
-        2. Nassim Nicholas Taleb: Fooled by Randomness: The Hidden Role of Chance in Life and in the Markets
-        3. Robert Greene: The 48 Laws of Power
-        4. Stephen. R. Covey: The 7 Habits of Highly Effective People: Powerful Lessons in Personal Change
-        5. James Fadiman: The Psychedelic Explorer’s Guide: Safe, Therapeutic, and Sacred Journeys
-        6. Brian Tracy: Eat That Frog!: 21 Great Ways to Stop Procrastinating and Get More Done in Less Time
-        7. Napoleon Hill: Think and Grow Rich: The Original 1937 Unedited Edition
-        8. Alan Wallace: The Attention Revolution: Unlocking the Power of the Focused Mind
-        9. John Durant: The Paleo Manifesto: Ancient Wisdom for Lifelong Health
-        10. Daniel J. Siegel: Mindsight: The New Science of Personal Transformation
-        11. Dale Carnegie: How to Win Friends & Influence People
-        12. David D. Burns: Feeling Good: The New Mood Therapy
-        13. Maxwell Maltz: Psycho-Cybernetics, A New Way to Get More Living Out of Life
-        14. Daniel Kahneman: Thinking, Fast and Slow
-        15. Chris Hadfield: An Astronaut’s Guide to Life on Earth: What Going to Space Taught Me About Ingenuity, Determination, and Being Prepared for Anything
-        16. Paul Jaminet & Shou-Ching Jaminet: Perfect Health Diet: Regain Health and Lose Weight by Eating the Way You Were Meant to Eat
-        17. John C. Maxwell: Failing Forward: Turning Mistakes into Stepping Stones for Success
-        18. Eckhart Tolle: The Power of Now
-        19. Randy Pausch: The Last Lecture
-        20. Brené Brown: Daring Greatly: How the Courage to Be Vulnerable Transforms the Way We Live, Love, Parent, and Lead
-        21. Carl Sagan: The Demon-Haunted World: Science as a Candle in the Dark
-        22. Jules Evans: Philosophy for Life
-        23. Victor. E. Frankl: Man’s Search For Meaning
-        24. Joshua Becker: Simplify
-        25. Kamal Ravikant: Love Yourself Like Your Life Depends On It
-      -->
       <p>Psychology, pseudoscience and the demarcation problem</p>
       <ul>
         <li>Vox: 
@@ -1576,6 +1549,10 @@
           See the picture
           <a href="https://www.reddit.com/r/pics/comments/8av8rk/checkmate_flat_earth_society/">Checkmate Flat Earth Society</a>,
           posted by amazed_spirit on 09.04.2018.
+        </li>
+        <li>D'Angour, Armand:
+          <a href="https://engelsbergideas.com/notebook/eureka-whats-the-truth-about-archimedes-cry/">Eureka – what’s the truth about Archimedes’ cry?</a>,
+          <i class="website">Engelsberg Ideas</i>, 16.06.2021.
         </li>
         <li>
           <a href="https://www.improbable.com/ig-about/winners/">Ig® Nobel Prize Winners</a>,
