Add: Altbach: Too much academic research is being published

--- a/science/index.html
+++ b/science/index.html
@@ -1396,6 +1396,10 @@
           <i class="blog">Backreaction</i>, 07.02.2018.
           <!--@@PDF-->
         </li>
+        <li>Altbach, Philip G.; de Wit, Hans:
+          <a href="https://www.universityworldnews.com/post.php?story=20180905095203579">Too much academic research is being published</a>,
+          <i class="website">University World News</i>, 07.11.2018.
+        </li>
         <li>Tetrad:
           <ul>
             <li>Glymour, Clark N.:
