Add: The Gruesome Truth About Pavlov's Dogs

--- a/science/index.html
+++ b/science/index.html
@@ -1306,6 +1306,10 @@
           <i class="booktitle">KUBARK: Le manuel secret de manipulation mentale et de torture psychologique de la CIA</i>. Traduit de l’anglais (États-Unis) par Émilien et Jean-Baptiste Bernard. </span>. Zones, 2012. (192 pages)
           <a href="https://www.editions-zones.fr/livres/kubark/" hreflang="fr"><abbr>ISBN</abbr> 9782355220456</a>.
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=CbDRQkl4gus">The Gruesome Truth About Pavlov's Dogs (And How His Findings are Commonly Misinterpreted)</a>
+          (<i class="ytchannel">Today I Found Out</i> on YouTube, 16 minutes, 14.06.2021).
+        </li>
       </ul>
       <p>Psychology, pseudoscience and the demarcation problem</p>
       <ul>
