Add: Oxford Handbook of Animal Ethics

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -250,6 +250,10 @@
         <i class="booktitle">The Oxford Handbook of Practical Ethics</i>. Oxford Handbooks. Oxford University Press, 2005. (792 pages)
         <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-practical-ethics-9780199284238"><abbr>ISBN</abbr> 9780199284238</a>.
       </li>
+      <li>Beauchamp, Tom L.; Frey, R. G. (editors):
+        <i class="booktitle">The Oxford Handbook of Animal Ethics</i>. Oxford Handbooks. Oxford University Press, 2014. (1008 pages)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-animal-ethics-9780199351978"><abbr>ISBN</abbr> 9780199351978</a>.
+      </li>
       <li><span lang="fr">Conche, Marcel:
         <i class="booktitle">Le fondement de la morale</i>. Perspectives critiques. Presses universitaires de France,</span> 2003. (160 pages)
         <a href="https://www.puf.com/content/Le_fondement_de_la_morale" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-053663-5</a>.
