Add: Oxford Handbook of Bioethics; Oxford Handbook of Environmental Ethics

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -254,6 +254,14 @@
         <i class="booktitle">The Oxford Handbook of Animal Ethics</i>. Oxford Handbooks. Oxford University Press, 2014. (1008 pages)
         <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-animal-ethics-9780199351978"><abbr>ISBN</abbr> 9780199351978</a>.
       </li>
+      <li>Steinbock, Bonny (editor):
+        <i class="booktitle">The Oxford Handbook of Bioethics</i>. Oxford Handbooks. Oxford University Press, 2009. (766 pages)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-bioethics-9780199562411"><abbr>ISBN</abbr> 9780199562411</a>.
+      </li>
+      <li>Gardiner, Stephen M.; Thompson, Allen (editors):
+        <i class="booktitle">The Oxford Handbook of Environmental Ethics</i>. Oxford Handbooks. Oxford University Press, 2019 (2016). (616 pages)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-environmental-ethics-9780190933388"><abbr>ISBN</abbr> 9780190933388</a>.
+      </li>
       <li><span lang="fr">Conche, Marcel:
         <i class="booktitle">Le fondement de la morale</i>. Perspectives critiques. Presses universitaires de France,</span> 2003. (160 pages)
         <a href="https://www.puf.com/content/Le_fondement_de_la_morale" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-053663-5</a>.
