Add: Harris: Oxford Handbook of British Philosophy in the Eighteenth Century

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -359,6 +359,10 @@
         <i class="booktitle">The Oxford Handbook of British Philosophy in the Seventeenth Century</i>. Oxford Handbooks. Oxford University Press, 2013. (650 pages)
         <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-british-philosophy-in-the-seventeenth-century-9780199549993"><abbr>ISBN</abbr> 9780199549993</a>.
       </li>
+      <li>Harris, James A. (editor):
+        <i class="booktitle">The Oxford Handbook of British Philosophy in the Eighteenth Century</i>. Oxford Handbooks. Oxford University Press, 2013. (688 pages)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-british-philosophy-in-the-eighteenth-century-9780199549023"><abbr>ISBN</abbr> 9780199549023</a>.
+      </li>
       <li><span lang="de">
         <i class="booktitle">Kindler Kompakt Philosophie 19. Jahrhundert</i>. Ausgewählt von Jan Urbich. Metzler, 2016</span>. (206 pages)
         <a href="https://www.springer.com/de/book/9783476055361#otherversion=9783476040664"><abbr>ISBN</abbr> 978 3 476 04066 4 (or 978 3 476 05536 1 (e-book))</a>.<!--www.metzlerverlag.de-->
