--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -363,6 +363,13 @@
         <i class="booktitle">The Oxford Handbook of British Philosophy in the Eighteenth Century</i>. Oxford Handbooks. Oxford University Press, 2013. (688 pages)
         <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-british-philosophy-in-the-eighteenth-century-9780199549023"><abbr>ISBN</abbr> 9780199549023</a>.
       </li>
+      <li>Forster, Michael N.; Gjesdal, Kristin (editors):
+        <i class="booktitle">The Oxford Handbook of German Philosophy in the Nineteenth Century</i>. Oxford Handbooks. Oxford University Press, 2015. (890 pages)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-german-philosophy-in-the-nineteenth-century-9780199696543"><abbr>ISBN</abbr> 9780199696543</a>.
+        <br /><a href="https://twitter.com/aufgehendeRest/status/1403092763550310404">Christopher Satoor tweeted this booktitle on 10.06.2021</a> saying
+        <q cite="https://twitter.com/aufgehendeRest/status/1403092763550310404">I am really excited about this text! This text is the Giant of Giants in German Philosophy textbooks: Featuring @andrewsbowie
+        Dalia Nassar, Alison Stone, Sebastian Gardner, Gunter Zoller, Terry Pinkard, Katia Hay, Frederick Beiser Markus Gabriel, Michele Kosch, Paul Guyer</q>
+      </li>
       <li><span lang="de">
         <i class="booktitle">Kindler Kompakt Philosophie 19. Jahrhundert</i>. Ausgewählt von Jan Urbich. Metzler, 2016</span>. (206 pages)
         <a href="https://www.springer.com/de/book/9783476055361#otherversion=9783476040664"><abbr>ISBN</abbr> 978 3 476 04066 4 (or 978 3 476 05536 1 (e-book))</a>.<!--www.metzlerverlag.de-->
