Add: Oxford Handbook of Continental Philosophy

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -374,6 +374,10 @@
         <i class="booktitle">The Oxford Handbook of British Philosophy in the Nineteenth Century</i>. Oxford Handbooks. Oxford University Press, 2014. (672 pages)
         <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-british-philosophy-in-the-nineteenth-century-9780199594474"><abbr>ISBN</abbr> 9780199594474</a>.
       </li>
+      <li>Leiter, Brian; Rosen, Michael:
+        <i class="booktitle">The Oxford Handbook of Continental Philosophy</i>. Oxford Handbooks. Oxford University Press, 2009. (826 pages)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-continental-philosophy-9780199572991"><abbr>ISBN</abbr> 9780199572991</a>.
+      </li>
       <li><span lang="de">
         <i class="booktitle">Kindler Kompakt Philosophie 19. Jahrhundert</i>. Ausgewählt von Jan Urbich. Metzler, 2016</span>. (206 pages)
         <a href="https://www.springer.com/de/book/9783476055361#otherversion=9783476040664"><abbr>ISBN</abbr> 978 3 476 04066 4 (or 978 3 476 05536 1 (e-book))</a>.<!--www.metzlerverlag.de-->
