Add articles about the history of philosoph

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -421,6 +421,18 @@
         discusses some important ideas of thirty philosophers and thinkers and asks about the relevance of these ideas to the current world.
       </li>
     </ul>
+    <p>Articles:</p>
+    <ul>
+      <li>Lagerlund, Henrik:
+        <a href="https://aeon.co/essays/there-was-no-such-thing-as-renaissance-philosophy">There was no such thing as ‘Renaissance philosophy’</a>,
+        <i class="website">Aeon Essays</i>, 31.05.2021.
+        <br />Subtitle: <q>Humanism did not replace Scholasticism, nor is it clear that ideas like the Renaissance help us understand history at all</q>.
+      </li>
+      <li>Alpvert, Avram:
+        <a href="https://aeon.co/essays/racism-is-baked-into-the-structure-of-dialectical-philosophy">Philosophy’s systemic racism</a>,
+        <i class="website">Aeon Essya</i>, 24.09.2020.
+      </li>
+    </ul>
 
     <p>YouTube playlists and videos about the history of philosophy:</p>
     <ul>
