Add: Kraut: Aristotle: Political Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1531,6 +1531,10 @@
           <a href="https://aeon.co/essays/what-can-aristotle-teach-us-about-the-routes-to-happiness">Why read Aristotle today?</a>,
           <i class="website">Aeon</i>, 29.05.2018.
         </li>
+        <li>Kraut, Richard:
+          <i class="booktitle">Aristotle: Political Philosophy</i>. Founders of Modern Political and Social Thought. Oxford University Press, 2002. (536 pages)
+          <a href="https://global.oup.com/academic/product/aristotle-9780198782001"><abbr>ISBN</abbr> 9780198782001</a>.
+        </li>
         <li>Hall, Edith:
           <i class="booktitle">Aristotle’s Way: How Ancient Wisdom Can Change Your Life</i>. Penguin, 2018. (272 pages)
           <a href="https://www.penguin.co.uk/books/1111600/aristotle-s-way/9781847924070/"><abbr>ISBN</abbr> 9781847924070</a>.
