--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -764,10 +764,14 @@
               Mike Archbold writes: "Without Aristotle there would have been no syllogism. Without syllogisms there wouldn't even be the simplest form of AI, which would have no way of forward chaining." 
           -->
         </li>
-        <li>David Chalmers:
+        <li>Chalmers, David:
           <a href="https://www.youtube.com/watch?v=uUfz6oahp2Q">Why Isn't There More Progress in Philosophy?</a> 
-          (YouTube, 55 minutes, 19.12.2013): Annual Lecture at Royal Institute of Philosphy, 2013.
+          (<i class="ytchannel">RoyIntPhilosophy</i> on YouTube, 55 minutes, 20.12.2013): Annual Lecture at Royal Institute of Philosphy, 2013.
           <!--@@todo summarize-->
+        </li>
+        <li>Daly, Chris:
+          <a href="https://aeon.co/essays/why-doesnt-philosophy-progress-from-debate-to-consensus">Philosophy’s lack of progress / Why doesn’t philosophy progress from debate to consensus?</a>,
+          <i class="website">Aeon Essays</i>, 11.06.2021.
         </li>
       </ul>
     </section>
