--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1490,6 +1490,10 @@
           <i class="booktitle">The Cambridge Companion to Plato's Republic</i>. Cambridge Companions to Philosophy. ambridge University Press, 2007. (562 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/cambridge-companion-platos-republic?format=PB"><abbr>ISBN</abbr> 9780521548427</a>.
         </li>
+        <li>Fine, Gail (editor):
+          <i class="booktitle">The Oxford Handbook of Plato</i>. Oxford Handbooks. Oxford University Press, 2011. (618 pages)
+          <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-plato-9780199769193"><abbr>ISBN</abbr> 9780199769193</a>.
+        </li>
         <li>Lane, Melissa:
           <a href="https://fivebooks.com/best-books/plato-melissa-lane/">The Best Plato Books</a>,
           <i class="website">Five Books</i>, 14.07.2014, updated on 01.06.2020.
