--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1463,6 +1463,18 @@
         <a href="marx_karl.html">Karl Marx</a>.
       </p>
 
+      <h3>Socrates (<abbr>c.</abbr> 470 – 399 <abbr>BC</abbr>)</h3>
+      <ul>
+        <li>Taylor, C. C. W.:
+          <i class="booktitle">Socrates: A Very Short Introduction</i>. Oxford University Press, 2019. (160 pages)
+          <a href="https://global.oup.com/academic/product/socrates-a-very-short-introduction-9780198835981"><abbr>ISBN</abbr> 9780198835981</a>.
+        </li>
+        <li>Cross, R. Nicol:
+          <i class="booktitle">Socrates, The Man and His Mission</i>. [1914] Routledge, 2020. (358 pages)
+          <a href="https://www.routledge.com/Socrates-The-Man-and-His-Mission/Cross/p/book/9781138623958"><abbr>ISBN</abbr> 9781138623958</a>.
+        </li>
+      </ul>
+
       <h3>Plato (428/427 or 424/423 – 348/347 <abbr>BC</abbr>)</h3>
       <ul>
         <li>Plato:
