Add: Lagerlund: Skepticism in Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2960,6 +2960,11 @@
           familiar from science fiction and dorm room debates — lie at the core of venerable philosophical arguments for radical skepticism: the stark contention that we in fact know nothing at all about the world,
           that we have no more reason to believe any claim — that there are trees, that we have hands — than we have to disbelieve it. (&hellip;)</q>
         </li>
+        <li>Lagerlund, Henrik:
+          <i class="booktitle">Skepticism in Philosophy: A Comprehensive, Historical Introduction</i>. Routledge, 2020. (254 pages)
+          <a href="https://www.routledge.com/Skepticism-in-Philosophy-A-Comprehensive-Historical-Introduction/Lagerlund/p/book/9781138555563"><abbr>ISBN</abbr> 9781138555563</a>.
+          <br />A history of skepticism since Pyrrho.
+        </li>
         <li>Unger, Peter:
           <i class="booktitle">Empty Ideas: A Critique of Analytic Philosophy</i>. Oxford University Press, 2014. (272 pages)
           <a href="https://global.oup.com/academic/product/empty-ideas-9780199330812"><abbr>ISBN</abbr> 9780199330812</a>.
