Add: Scheller: Identität im Zwielicht

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2530,6 +2530,10 @@
           <q lang="fr">Peut-on définir l’identité nationale sans exclure certains Français ? En reprenant un à un les critères utilisés par Ernest Renan dans sa célèbre conférence sur la nation – race, moeurs, religion, langue –, Hervé Le Bras montre que c’est impossible. Si l’on veut à tout prix sauver la notion d’identité, elle doit être fondée sur une culture ouverte au monde et à ses mutations, celle grâce à laquelle la France s’est construite au fil des siècles. (&hellip;)</q>
           <!--Le Bras also criticsed the concept of "grand remplacement".-->
         </li>
+        <li><span lang="de">Scheller, Jörg:
+          <i class="booktitle">Identität im Zwielicht. Perspektiven für eine offene Gesellschaft</i>. Claudius,</span> 2021.
+          <a href="https://shop.claudius.de/das-ethische-manifest.html" hreflang="de"><abbr>ISBN</abbr> 978-3-532-62860-7</a>.
+        </li>
       </ul>
     </section>
 
