Add: Identitätspolitik - Menschen sind Möglichkeitswesen

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2534,6 +2534,10 @@
           <i class="booktitle">Identität im Zwielicht. Perspektiven für eine offene Gesellschaft</i>. Claudius,</span> 2021.
           <a href="https://shop.claudius.de/das-ethische-manifest.html" hreflang="de"><abbr>ISBN</abbr> 978-3-532-62860-7</a>.
         </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunk.de/identitaetspolitik-menschen-sind-moeglichkeitswesen.911.de.html?dram:article_id=499305" hreflang="de">Identitätspolitik - "Menschen sind Möglichkeitswesen"</a>,
+          Jörg Scheller im Gespräch mit Raphael Smarzoch, <i class="website">Deutschlandfunk</i>,</span> 27.06.2021.
+        </li>
       </ul>
     </section>
 
