--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1660,6 +1660,14 @@
         B785.P54 P52613 2021
       -->
 
+      <h3>Descartes (1596 – 1650)</h3>
+      <ul>
+        <li>Nadler, Steven; Schmaltz, Tad M.; Antoine-Mahut, Delphine:
+          <i class="booktitle">The Oxford Handbook of Descartes and Cartesianism</i>. Oxford Handbooks. Oxford University Press, 2019. (848 pages)
+          <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-descartes-and-cartesianism-9780198796909"><abbr>ISBN</abbr> 9780198796909</a>.
+        </li>
+      </ul>
+
       <h3>Blaise Pascal (1623 – 1662)</h3>
       <ul>
         <li>Pascal, Blaise:
