Add: Oxford Handbook of Aristotle

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1563,6 +1563,10 @@
             * James Marriott: "Review: Aristotle’s Way: How Ancient Wisdom Can Change Your Life by Edith Hall — what would he think of Facebook?" The Times, 21.04.2018 (paywalled)
           -->
         </li>
+        <li>Shields, Christopher (editor):
+          <i class="booktitle">The Oxford Handbook of Aristotle</i>. Oxford Handbooks. Oxford University Press, 2015. (732 pages)
+          <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-aristotle-9780190244842"><abbr>ISBN</abbr> 9780190244842</a>.
+        </li>
         <li>Irwin, Terence:
           <i class="booktitle">Aristotle's First Principles</i>. Oxford University Press, 1990. (720 pages)
           <a href="https://global.oup.com/academic/product/aristotles-first-principles-9780198242901"><abbr>ISBN</abbr> 9780198242901</a>.
