Add: Collingwood: An Essay on Philosophical Method

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -113,7 +113,7 @@
         <span lang="en-GB">An excellent introduction. Each chapter has exercises with solutions.
         The list of further reading also explains where to go after reading this book.</span>
       </li>
-      <li>Rosenberg, Jay F.
+      <li>Rosenberg, Jay F.:
         <i class="booktitle">The Practice of Philosophy. A Handbook for Beginners</i>.
         Englewood Cliffs, New Jersey: Prentice Hall, 1984.
         3rd edition. Pearson, 1995. (133 p.) 
@@ -150,7 +150,7 @@
         Hamburg: Junius, 2009. (192 p.) 
         <a href="http://www.junius-verlag.de/buecher/philosophische-methoden"><abbr>ISBN</abbr> 978-3-88506-092-5</a>
       </li>
-      <li>Hospers, John: 
+      <li>Hospers, John:
         <i class="booktitle">An Introduction to Philosophical Analysis</i>. 4th edition. Pearson, 1997. (282 p.)
         <a href="http://www.taylorandfrancis.com/books/details/9780415157933/"><abbr>ISBN</abbr> 978-0-415-15793-3</a>.
         <br />This classic introduction was first published in 1956 and went through several thorough revisions 
@@ -161,6 +161,15 @@
         2., durchgesehene und überarbeitete Auflage. 
         De Gruyter Studium. De Gruyter, 2013. (340 p.) 
         <a href="http://www.degruyter.com/view/product/206810"><abbr>ISBN</abbr> 978-3-11-031448-9</a>. 
+      </li>
+      <li>Collingwood, R. G.:
+        <i class="booktitle">An Essay on Philosophical Method</i>. Revised edition. Oxford University Press, 2008. (494 pages)
+        <a href="https://global.oup.com/academic/product/an-essay-on-philosophical-method-9780199544936"><abbr>ISBN</abbr> 9780199544936</a>.
+        <br />From the publisher's book description:
+        <q><i class="booktitle">An Essay on Philosophical Method</i> contains the most sustained discussion in the twentieth century of the subject matter and method of philosophy and
+        an unparalleled explanation of why philosophy has a distinctive domain of enquiry that differs from that of the sciences of nature.
+        This new edition of the Essay focuses on Collingwood's contribution to metaphilosophy and locates his argument for the autonomy of philosophy
+        against the twentieth century trend to naturalize its subject matter. (&hellip;)</q>
       </li>
       <li lang="de">Brun, Georg; Hirsch Hadorn, Gertrude: 
         <i class="booktitle">Textanalyse in den Wissenschaften: Inhalte und Argumente analysieren und verstehen</i>. 
