--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1473,6 +1473,10 @@
           <i class="booktitle">Socrates, The Man and His Mission</i>. [1914] Routledge, 2020. (358 pages)
           <a href="https://www.routledge.com/Socrates-The-Man-and-His-Mission/Cross/p/book/9781138623958"><abbr>ISBN</abbr> 9781138623958</a>.
         </li>
+        <li>Morrison, Donald R.:
+          <i class="booktitle">The Cambridge Companion to Socrates</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2011. (436 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/cambridge-companion-socrates?format=PB"><abbr>ISBN</abbr> 9780521541039</a>.
+        </li>
       </ul>
 
       <h3>Plato (428/427 or 424/423 – 348/347 <abbr>BC</abbr>)</h3>
