--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1477,6 +1477,10 @@
           <i class="booktitle">The Cambridge Companion to Socrates</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2011. (436 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/cambridge-companion-socrates?format=PB"><abbr>ISBN</abbr> 9780521541039</a>.
         </li>
+        <li>Vlastos, Gregory:
+          <i class="booktitle">Socrates: Ironist and Moral Philosopher</i>. Cambridge University Press, 1991. (348 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/socrates-ironist-and-moral-philosopher?format=PB"><abbr>ISBN</abbr> 9780521314503</a>.
+        </li>
       </ul>
 
       <h3>Plato (428/427 or 424/423 – 348/347 <abbr>BC</abbr>)</h3>
