Add: Socrates and Self-Knowledge

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1481,6 +1481,10 @@
           <i class="booktitle">Socrates: Ironist and Moral Philosopher</i>. Cambridge University Press, 1991. (348 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/socrates-ironist-and-moral-philosopher?format=PB"><abbr>ISBN</abbr> 9780521314503</a>.
         </li>
+        <li>Moore, Christopher:
+          <i class="booktitle">Socrates and Self-Knowledge</i>. Cambridge University Press, 2018. (293 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/philosophy/classical-philosophy/socrates-and-self-knowledge?format=PB"><abbr>ISBN</abbr> 9781107558472</a>.
+        </li>
       </ul>
 
       <h3>Plato (428/427 or 424/423 – 348/347 <abbr>BC</abbr>)</h3>
