Add: Dennett: Breaking the Spell

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1109,6 +1109,10 @@
           <i class="booktitle">The New Atheism: Taking a Stand for Science and Reason</i>. Prometheus Boosk, 2009.
           <a href="http://www.prometheusbooks.com/books/9781591027515"><abbr>ISBN</abbr> 9781591027515</a>.
         </li>
+        <li>Dennett, Daniel C.:
+          <i class="booktitle">Breaking the Spell: Religion as a Natural Phenomenon</i>. Penguin, 2007. (464 pages)
+          <a href="https://www.penguin.co.uk/books/54999/breaking-the-spell/9780141017778.html"><abbr>ISBN</abbr> 9780141017778</a>.
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=WpKmje75kZo">We'd be better off without religion: Christopher Hitchens</a>
           (<i class="ytchannel">Intelligence Squared</i> on YouTube, 14 minutes, 16.12.2011).
