Add: Klein: Atheismus - Gottlos groß werden

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -653,6 +653,12 @@
           <i class="booktitle">Atheismus. Fünf Einwände und eine Frage</i>. Blaue Reihe. Meiner,</span> 2021. (144 pages)
           <a href="https://meiner.de/atheismus.html" hreflang="de"><abbr>ISBN</abbr> 978-3-7873-3957-0</a>.
         </li>
+        <li><span lang="de">Klein, Mechthild:
+          <a href="https://www.deutschlandfunk.de/atheismus-gottlos-gross-werden.2540.de.html?dram:article_id=498861" hreflang="de">Atheismus - Gottlos groß werden</a>,
+          <i class="website">Deutschlandunk</i>,</span> 23.06.2021.
+          <br />The article gives a theistic definition of atheism: <q lang"de">Atheist ist, wer die Existenz Gottes bestreitet,</q>
+          <abbr>i.e.</abbr> an atheist is someone who denies the existence of God.
+        </li>
       </ul>
     </section>
 
