Add: Dawkins: The God Delusion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1119,6 +1119,10 @@
           <i class="booktitle">Breaking the Spell: Religion as a Natural Phenomenon</i>. Penguin, 2007. (464 pages)
           <a href="https://www.penguin.co.uk/books/54999/breaking-the-spell/9780141017778.html"><abbr>ISBN</abbr> 9780141017778</a>.
         </li>
+        <li>Dawkins, Richard:
+          <i class="booktitle">The God Delusion</i>. 10th Anniversary Edition. Black Swan (Penguin), 2016. (496 pages)
+          <a href="https://www.penguin.co.uk/books/1028478/the-god-delusion/9781784161927.html"><abbr>ISBN</abbr> 9781784161927</a>.
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=WpKmje75kZo">We'd be better off without religion: Christopher Hitchens</a>
           (<i class="ytchannel">Intelligence Squared</i> on YouTube, 14 minutes, 16.12.2011).
