Add: Dawkins: Outgrowing God

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1123,6 +1123,13 @@
           <i class="booktitle">The God Delusion</i>. 10th Anniversary Edition. Black Swan (Penguin), 2016. (496 pages)
           <a href="https://www.penguin.co.uk/books/1028478/the-god-delusion/9781784161927.html"><abbr>ISBN</abbr> 9781784161927</a>.
         </li>
+        <li>Dawkins, Richard:
+          <i class="booktitle">Outgrowing God: A Beginner’s Guide</i>. Black Swan (Penguin), 2020. (304 pages)
+          <a href="https://www.penguin.co.uk/books/1117092/outgrowing-god/9781784164201.html"><abbr>ISBN</abbr> 9781784164201</a>.
+          <br />Newmark, Catherine: <span lang="de">
+          <a href="https://www.deutschlandfunkkultur.de/dawkins-atheismus-fuer-anfaenger-jullien-ressourcen-des.1270.de.html?dram:article_id=471308" hreflang="de">Dawkins: "Atheismus für Anfänger" / Jullien: "Ressourcen des Christentums" - Sinnsuche im postreligiösen Zeitalter</a>,
+          <i class="website">Deutschlandfunk Kultur</i>,</span> 29.02.2020.
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=WpKmje75kZo">We'd be better off without religion: Christopher Hitchens</a>
           (<i class="ytchannel">Intelligence Squared</i> on YouTube, 14 minutes, 16.12.2011).
