Add: Philosoph Michael Schmidt-Salomon - Aufgeklärte Religion aussterbend wie Männergesangsvereine

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -659,6 +659,10 @@
           <br />The article gives a theistic definition of atheism: <q lang"de">Atheist ist, wer die Existenz Gottes bestreitet,</q>
           <abbr>i.e.</abbr> an atheist is someone who denies the existence of God.
         </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunk.de/philosoph-michael-schmidt-salomon-aufgeklaerte-religion.886.de.html?dram:article_id=482051" hreflang="de">Philosoph Michael Schmidt-Salomon - "Aufgeklärte Religion aussterbend wie Männergesangsvereine"</a>,
+          Michael Schmidt-Salomon im Gespräch mit Christiane Florin, <i class="website">Deutschlandunk</i>,</span> 10.08.2020.
+        </li>
       </ul>
     </section>
 
