Add: Stellenwert von Religion - Wie geht es Gott in Frankreich?

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -663,6 +663,10 @@
           <a href="https://www.deutschlandfunk.de/philosoph-michael-schmidt-salomon-aufgeklaerte-religion.886.de.html?dram:article_id=482051" hreflang="de">Philosoph Michael Schmidt-Salomon - "Aufgeklärte Religion aussterbend wie Männergesangsvereine"</a>,
           Michael Schmidt-Salomon im Gespräch mit Christiane Florin, <i class="website">Deutschlandunk</i>,</span> 10.08.2020.
         </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunk.de/stellenwert-von-religion-wie-geht-es-gott-in-frankreich.886.de.html?dram:article_id=446347" hreflang="de">Stellenwert von Religion - Wie geht es Gott in Frankreich?</a>,
+          <i class="website">Deutschlandfunk</i>, 15.04.2019.
+        </li>
       </ul>
     </section>
 
