Various minor edits

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -529,31 +529,31 @@
       </li>
     </ul>
 
-    <h2>Anthologies</h2>
+    <h2>Anthologies and Conference Proceedings</h2>
     <ul>
-      <li>Balashov, Yuri; Rosenberg, Alex, <abbr>eds.</abbr>: 
-        <i class="booktitle">Philosophy of Science: Contemporary Readings</i>. 
-        Routledge Contemporary Readings in Philosophy. Taylor &amp; Francis, 2001. (544 p.) 
-        <a href="http://www.taylorandfrancis.com/books/details/9780415257824/"><abbr>ISBN</abbr> 978-0-415-25782-4</a>. 
+      <li>Balashov, Yuri; Rosenberg, Alex, <abbr>eds.</abbr>:
+        <i class="booktitle">Philosophy of Science: Contemporary Readings</i>.
+        Routledge Contemporary Readings in Philosophy. Taylor &amp; Francis, 2001. (544 pages)
+        <a href="http://www.taylorandfrancis.com/books/details/9780415257824/"><abbr>ISBN</abbr> 978-0-415-25782-4</a>.
         <br />Companion volume to Alex Rosenberg’s <i class="booktitle">Philosophy of Science: A Contemporary Introduction</i>.
       </li>
-      <li>Cover, J. A.; Curd, Martin; Pincock, Christopher, <abbr>eds.</abbr>: 
-        <i class="booktitle">Philosophy of Science: The Central Issues</i>. Second edition. 
-        W. W. Norton, 2012. (1393 p.) 
-        <a href="http://books.wwnorton.com/books/detail.aspx?id=4294969958"><abbr>ISBN</abbr> 978-03 93 91 90 35</a>. 
+      <li>Cover, J. A.; Curd, Martin; Pincock, Christopher, <abbr>eds.</abbr>:
+        <i class="booktitle">Philosophy of Science: The Central Issues</i>. Second edition.
+        W. W. Norton, 2012. (1393 pages)
+        <a href="http://books.wwnorton.com/books/detail.aspx?id=4294969958"><abbr>ISBN</abbr> 978-03 93 91 90 35</a>.
       </li>
-      <li lang="fr">Braunstein, Jean-François, <abbr>dir.</abbr>: 
-        <i class="booktitle">Textes Clés de l’histoire des sciences. Méthodes, styles et controverses</i>. 
-        Textes clés. Vrin, 2008. (384 p.) 
+      <li lang="fr">Braunstein, Jean-François, <abbr>dir.</abbr>:
+        <i class="booktitle">Textes Clés de l’histoire des sciences. Méthodes, styles et controverses</i>.
+        Textes clés. Vrin, 2008. (384 pages)
         <a href="http://www.vrin.fr/book.php?code=9782711619337"><abbr>ISBN</abbr> 978-2-7116-1933-7</a>.
-        <br /><span lang="en-GB">This anthology contains texts by G. Bachelard, G. Canguilhem, 
-        A. Comte, A. Crombie, L. Daston, P. Duhem, L. Fleck, M. Foucault, A. Koyré, 
+        <br /><span lang="en-GB">This anthology contains texts by G. Bachelard, G. Canguilhem,
+        A. Comte, A. Crombie, L. Daston, P. Duhem, L. Fleck, M. Foucault, A. Koyré,
         T. Kuhn, P. Laffitte, R.K. Merton and P. Tannery.
         </span>
       </li>
       <li lang="de">Gadenne, Volker; Visintin, Aldo, <abbr>Hrsg.</abbr>:
         <i class="booktitle">Wissenschaftsphilosophie</i>. Alber-Texte Philosophie.
-        Freiburg; München: Karl Alber, 1999. (192 p.) 
+        Freiburg; München: Karl Alber, 1999. (192 pages)
         <a href="http://www.verlag-alber.de/suche/details_html?k_tnr=48005"><abbr>ISBN</abbr> 978-3-495-48005-2</a>.
         <br /><span lang="en-GB">A rather short anthology that starts with
         Francis Bacon's <a href="https://en.wikipedia.org/wiki/Novum_Organum" class="booktitle">Novum Organum</a>.
