Add: Oxford Handbook of Philosophy of Science

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -318,6 +318,10 @@
         <i class="booktitle">An Introduction to the Philosophy of Science</i>. Cambridge Introductions to Philosophy. Cambridge University Press, 2014. (298 pages)
         <a href="https://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/introduction-philosophy-science?format=PB"><abbr>ISBN</abbr> 9780521129992</a>.
       </li>
+      <li>Humphreys, Paul (editor):
+        <i class="booktitle">The Oxford Handbook of Philosophy of Science</i>. Oxford Handbooks. Oxford University Press, 2019 (2016). (944 pages)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-philosophy-of-science-9780190939397"><abbr>ISBN</abbr> 9780190939397</a>.
+      </li>
     </ul>
 
     <h2>Introductory Lectures (YouTube)</h2>
