Add: O'Hear: Philosophy of Science

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -574,6 +574,14 @@
         several essays by Achinstein about most of these topics.
         The examples of scientific theories in the book all come from physics.
       </li>
+      <li>O'Hear, Anthony (editor):
+        <i class="booktitle">Philosophy of Science</i>. Royal Institute of Philosophy Supplements. Cambridge University Press, 2007. (286 pages)
+        <a href="https://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/philosophy-science"><abbr>ISBN</abbr> 9780521718967</a>.
+        <br />From the publisher's book description:
+        <q>This volume is based on the lectures given in The Royal Institute of Philosophy's annual lecture series in London for 2005–6. In it leading figures in the philosophy of science focus on key topics in the subject:
+        realism, natural kinds, scientific progress, the confirmation of theories and the notion of simplicity in theory evaluation, the use of models in science and the relation of physics and metaphysics. (&hellip;)</q>
+        Contributors to this volume include Hasok Chang, James Ladyman and Ian Hacking.
+      </li>
     </ul>
 
     <section>
