add: Stove: Popper and After

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -976,6 +976,12 @@
         <i class="booktitle">The Cambridge Companion to Popper</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2016. (420 pages)
         <a href="https://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/cambridge-companion-popper"><abbr>ISBN</abbr> 9780521672429</a>.
       </li>
+      <li>Stove, David Charles:
+        <i class="booktitle">Popper and After: Four Modern Irrationalists</i>. Pergamon Press, 1982.
+        <br />See <a href="https://en.wikipedia.org/wiki/Popper_and_After"><i class="booktitle">Popper and After</i> on Wikipedia</a>
+        and
+        <a href="http://ontology.buffalo.edu/stove/500-600.htm"><i class="booktitle">Popper and After</i> online</a>.
+      </li>
 
       <li>Oreskes, Naomi:
         <i class="booktitle">Why Trust Science?</i>. Princeton University Press, 2019. (376 pages)
