--- a/complaint-form.html
+++ b/complaint-form.html
@@ -34,6 +34,8 @@
       form p.narrow { display: none; }
       form p.wide { display: block; }
     }
+    ::placeholder { color: #991601; background-color: inherit;}
+    .minLengthReached { border: 2px solid green; }
   </style>
 </head>
 <body class="philosophypage">
@@ -85,5 +87,22 @@
     </p>
     <p>This website is a cookie-free zone.</p>
   </footer>
+
+  <script>//adapted from https://stackoverflow.com/a/43837521/6002174
+    //const textarea = document.querySelector("textarea");
+    const textarea = document.getElementById("therant");
+    textarea.addEventListener("input", event => {
+      const target = event.currentTarget;
+      const minLength = target.getAttribute("minlength");
+      const currentLength = target.value.length;
+      if (currentLength >= minLength) {
+        textarea.className = "minLengthReached";
+        console.log("Minimum input length reached.");
+      } else if (currentLength < minLength) {
+        textarea.classList.remove("minLengthReached");
+        console.log("Minimum input length not reached.");
+      }
+    });
+  </script>
 </body>
 </html>
