Add: Deutschlandfunk Kulture, 2011, 2014

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1276,6 +1276,21 @@
           <a href="https://www.youtube.com/watch?v=Y8o-bjw8rXk">Why Should Anyone Care About Mimetic Theory?</a>
           (<i class="ytchannel">RavenCast</i> on YouTube, 2 minutes, 24.07.2013).
         </li>
+        <li><span lang="de">Hueck, Carsten:
+          <a href="https://www.deutschlandfunkkultur.de/wichtigste-quelle-menschlicher-konflikte.950.de.html?dram:article_id=140057" hreflang="de">Wichtigste Quelle menschlicher Konflikte</a>,
+          <i class="website">Deutschlandfunk Kultur</i>,</span> 23.05.2011.
+          <br />A review of the German translation of Girard's Shakespeare book.
+        </li>
+        <li><span lang="de">Ahrends, Martin:
+          <a href="https://www.deutschlandfunkkultur.de/ein-spezieller-blick-auf-den-dramatiker-aus-stratford.1270.de.html?dram:article_id=191641" hreflang="de">Ein spezieller Blick auf den Dramatiker aus Stratford</a>,
+          <i class="website">Deutschlandfunk Kultur</i>,</span> 04.12.2011.
+          <br />A review of the German translation of Girard's Shakespeare book.
+        </li>
+        <li><span lang="de">Hueck, Carsten:
+          <a href="https://www.deutschlandfunkkultur.de/sachbuch-wie-du-mir-so-ich-dir.1270.de.html?dram:article_id=305858" hreflang="de">Sachbuch - Wie Du mir, so ich dir</a>,
+          <i class="website">Deutschlandfunk Kultur</i>,</span> 11.12.2014.
+          <br />About the German translation of Girard's <i class="booktitle" lang="fr">Achever Clausewitz</i>.
+        </li>
         <li>Becklo, Matthew:
           <a href="https://www.wordonfire.org/resources/blog/beasts-of-no-nation-the-violent-and-the-sacred-and-rene-girard/19627/">“Beasts of No Nation”: The Violent and the Sacred and René Girard</a>,
           <i class="blog">World on Fire Blog</i>, 13.11.2015.
